--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <h1><%=spacePost.name%></h1>
 
@@ -13,4 +13,4 @@
 <% }) %>
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
