added post creation auth and link to username in post

--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -13,6 +13,9 @@
                      <p><%= spacePost.text %></p>
 
                 </div>
+                <div>
+                    <p>Submitted by <%= spacePost.author.username %></p>
+                </div>
 
             </div>
         </div>
