--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -1,39 +1,51 @@
 <% include ../partials/header %>
-
 <div class="container">
     <div class="row">
+        
         <div class="col-md-12">
             <div class="thumbnail">
-                <h1><%=spacePost.name%></h1>
                 <img class="img-responsive" src="<%= spacePost.image %>">
                 <div class="caption-full">
+                    <h4 class="pull-right">$9.00/night</h4>
+                    <h4><a><%=spacePost.name%></a></h4>
                     <p><%= spacePost.description %></p>
-                </div>
-                <div>
-                     <p><%= spacePost.text %></p>
-
-                </div>
-                <div>
-                    <p>Submitted by <%= spacePost.author.username %></p>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="thumbnail">
-                <p><a class="btn btn-success" href="/spaceblog/<%= spacePost._id %>/comments/new">Add New Comment</a></p>
-                <% spacePost.comments.forEach(function(comment){ %>
                     <p>
-                        <strong><%= comment.author %></strong> - <%= comment.text %>
+                        <em>Submitted By <%= spacePost.author.username %></em>
                     </p>
+                    <% if(currentUser && spacePost.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-xs btn-warning" href="/spaceblog/<%= spacePost._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/spaceblog/<%= spacePost._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
+                    <% }%>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a class="btn btn-success" href="/spaceblog/<%= spacePost._id %>/comments/new">Add New Comment</a>
+                </div>
+                <hr>
+                <% spacePost.comments.forEach(function(comment){ %>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong><%= comment.author.username %></strong>
+                            <span class="pull-right">10 days ago</span>
+                            <p>
+                                <%= comment.text %> 
+                            </p>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                            <a class="btn btn-xs btn-warning" 
+                               href="/spaceblog/<%=spacePost._id %>/comments/<%=comment._id %>/edit">Edit</a>
+                            <form id="delete-form" action="/spaceblog/<%=spacePost._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                            </form>
+                        <% } %>
+                        </div>
+                    </div>
                 <% }) %>
-
             </div>
         </div>
     </div>
-
 </div>
 
 <% include ../partials/footer %>
