create post button appearing only with admin user

--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -5,9 +5,11 @@
      <header class="jumbotron">
          <div class="container">
              <h1>Space blog</h1>
+             <% if(currentUser && username === "alex"){ %>
             <p>
                 <a class="btn btn-primary btn-large" href="/spaceblog/new">Add New Space Post</a>
             </p>
+             <% }%>
          </div>
      </header>
     <div class="row text-center" style="display:flex; flex-wrap: wrap;">
