--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,8 @@
 <form action="/register" method="post">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
+    <input type="text" name="adminCode" placeholder="Admin Code">
+
     <button>Sign Up</button>
 </form>
 <% include ./partials/footer %> 
