--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,9 +2,9 @@
 <h1>Sign Up!</h1>
 
 <form action="/register" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="text" name="adminCode" placeholder="Admin Code">
+    <input size="40" type="text" name="username" placeholder="username *"><br>
+    <input size="40" type="password" name="password" placeholder="password *"><br>
+    <input size="40" type="text" name="email" placeholder="email (not mandatory) ">
 
     <button>Sign Up</button>
 </form>
