--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -1,33 +1,116 @@
-<% include ../partials/header %>
+<% include ../partials/headerSpace %>
+
 
 
 <div class="container">
-     <header class="jumbotron">
-         <div class="container">
-             <h1>Space blog</h1>
-             <% if(currentUser && currentUser.username === "alex"){ %>
+     <div class="row">
+        <div class="col-md-8">
+            <h1 class="my-4">Page Heading
+                <small>Secondary Text</small>
+            </h1>
+            <% if(currentUser && currentUser.username === "alex"){ %>
             <p>
                 <a class="btn btn-primary btn-large" href="/spaceblog/new">Add New Space Post</a>
             </p>
-             <% }%>
-         </div>
-     </header>
-    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
-        <% spacePosts.forEach(function(post){ %>
-            <div class="col-md-3 col-sm-6">
-                <div class="img-thumbnail">
-                   <img src="<%= post.image %>" style="width:100%">
-                   <div class="caption">
-                       <h4><%= post.name %></h4>
-                   </div>
-                   <p>
-                       <a href="/spaceblog/<%= post._id %>" class="btn btn-primary">More Info</a>
-                   </p>
+             <% }%> 
+                    <% spacePosts.forEach(function(post){ %>
+                    <div class="card mb-4">
+                            
+                                <div class="card-img-top">
+                                <img src="<%= post.image %>" style="width:100%">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4><%= post.name %></h4>
+                                    </div>
+                                <p>
+                                    <a href="/spaceblog/<%= post._id %>" class="btn btn-primary">More Info &rarr;</a>
+                                </p>
+                                </div>
+                            
+                    </div>
+                    <div class="card-footer text-muted">
+                        Posted on January 1, 2017 by
+                        <a href="#">Start Bootstrap</a>
+                    </div>
+                    </div>
+                    <% }); %>
+
+                
+
+                <!-- Pagination -->
+                <ul class="pagination justify-content-center mb-4">
+                    <li class="page-item">
+                    <a class="page-link" href="#">&larr; Older</a>
+                    </li>
+                    <li class="page-item disabled">
+                    <a class="page-link" href="#">Newer &rarr;</a>
+                    </li>
+                </ul>
+
                 </div>
-            </div>
-        <% }); %>
-    </div> 
-     
+
+                <!-- Sidebar Widgets Column -->
+                <div class="col-md-4">
+
+                <!-- Search Widget -->
+                <div class="card my-4">
+                    <h5 class="card-header">Search</h5>
+                    <div class="card-body">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button">Go!</button>
+                        </span>
+                    </div>
+                    </div>
+                </div>
+
+                <!-- Categories Widget -->
+                <div class="card my-4">
+                    <h5 class="card-header">Categories</h5>
+                    <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                            <a href="#">Web Design</a>
+                            </li>
+                            <li>
+                            <a href="#">HTML</a>
+                            </li>
+                            <li>
+                            <a href="#">Freebies</a>
+                            </li>
+                        </ul>
+                        </div>
+                        <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                            <a href="#">JavaScript</a>
+                            </li>
+                            <li>
+                            <a href="#">CSS</a>
+                            </li>
+                            <li>
+                            <a href="#">Tutorials</a>
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <!-- Side Widget -->
+                <div class="card my-4">
+                    <h5 class="card-header">Side Widget</h5>
+                    <div class="card-body">
+                    You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                    </div>
+                </div>
+        </div>
+     </div>
 </div>
+
+
 
 <% include ../partials/footer %>
