--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -38,14 +38,22 @@
                 
 
                 <!-- Pagination -->
-                <ul class="pagination justify-content-center mb-4">
-                    <li class="page-item">
-                    <a class="page-link" href="#">&larr; Older</a>
-                    </li>
-                    <li class="page-item disabled">
-                    <a class="page-link" href="#">Newer &rarr;</a>
-                    </li>
-                </ul>
+                <div class="container text-center">
+                    <ul class="pagination">
+                        <li>
+                        <% for(var i = 0; i < pages; i++) { %>
+                            <% if(i===0) { %>
+                                <li>Pages: <a href="/spaceblog"><%= i %> </a></li>
+                            <% } else { %>
+                                <li><a href="/spaceblog/page/<%= i %>"> - <%= i %></a></li>
+                            <% } %>
+                        <% } %>
+                        </li>
+                    </ul>
+                     
+
+                </div>
+
 
                 </div>
 
