some navbar changes

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,7 +1,8 @@
 <% include ../partials/header %>
-<div class="container">
     <div class="row">
-        <h1 style="text-align: center">Add New Comment to <%= spacePost.name %></h1>
+        <h1 style="text-align: center">Add New Comment to
+            <%= spacePost.name %>
+        </h1>
         <div style="width: 30%; margin: 25px auto;">
             <form action="/spaceblog/<%= spacePost._id %>/comments" method="POST">
                 <div class="form-group">
@@ -14,5 +15,4 @@
             <a href="/spaceblog">Go Back</a>
         </div>
     </div>
-</div>
-<% include ../partials/footer %>
+    <% include ../partials/footer %>
