--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,24 @@
-<% include ./partials/header %> 
-<h1>Sign Up!</h1>
+<% include ./partials/header %>
 
-<form action="/register" method="post">
-    <input size="40" type="text" name="username" placeholder="username *"><br>
-    <input size="40" type="password" name="password" placeholder="password *"><br>
-    <input size="40" type="text" name="email" placeholder="email (not mandatory) ">
+    <div class="row">
+        <h1 style="text-align:center">Login</h1>
+        <div style="width:30%; margin: 25px auto;">
+            <form action="/register" method="POST">
+                <div class="form-group">
+                    <input type="text" name="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="email" placeholder="email (not mandatory) ">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+                </div>
+            </form>
+            <a href="/spaceblog">Go Back</a>
+        </div>
+    </div>
 
-    <button>Sign Up</button>
-</form>
-<% include ./partials/footer %> 
+    <% include ./partials/footer %>
