--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -1,129 +1,93 @@
 <% include ../partials/headerSpace %>
 
+    <div class="row">
+        <div class="col-md-8">
+            <h1 class="my-4">Page Heading
+                <small>Secondary Text</small>
+            </h1>
+            <% if(currentUser && currentUser.username === "alex"){ %>
+                <p>
+                    <a class="btn btn-primary btn-large" href="/spaceblog/new">Add New Space Post</a>
+                </p>
+                <% }%>
+                    <% spacePosts.forEach(function(post){ %>
+                        <div class="card mb-4">
 
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1 class="my-4">Page Heading
-                    <small>Secondary Text</small>
-                </h1>
-                <% if(currentUser && currentUser.username === "alex"){ %>
-                    <p>
-                        <a class="btn btn-primary btn-large" href="/spaceblog/new">Add New Space Post</a>
-                    </p>
-                    <% }%>
-                        <% spacePosts.forEach(function(post){ %>
-                            <div class="card mb-4">
-
-                                <div class="card-img-top">
-                                    <img src="<%= post.image %>" style="width:100%">
-                                    <div class="card-body">
-                                        <div class="card-title">
-                                            <h4>
-                                                <%= post.name %>
-                                            </h4>
-                                        </div>
-                                        <p>
-                                            <a href="/spaceblog/<%= post._id %>" class="btn btn-primary">More Info &rarr;</a>
-                                        </p>
+                            <div class="card-img-top">
+                                <img src="<%= post.image %>" style="width:100%">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4>
+                                            <%= post.name %>
+                                        </h4>
                                     </div>
+                                    <p>
+                                        <a href="/spaceblog/<%= post._id %>" class="btn btn-primary">Read more &rarr;</a>
+                                    </p>
+                                </div>
 
-                                </div>
-                                <div class="card-footer text-muted">
-                                    Posted on
-                                    <%= moment(post.createdOn).format('DD MM YYYY');  %>
-                                        by
-                                        <%= post.author.username %>
-                                </div>
                             </div>
-                            <% }); %>
+                            <div class="card-footer text-muted">
+                                Posted on
+                                <%= moment(post.createdOn).format('dddd DD/MM/YYYY');  %>
+                                    by
+                                    <%= post.author.username %>
+                            </div>
+                        </div>
+                        <% }); %>
 
 
 
-                                <!-- Pagination -->
-                                <div class="container text-center">
-                                    <ul class="pagination">
-                                        <li>
-                                            <% for(var i = 0; i < pages; i++) { %>
-                                                <% if(i===0) { %>
-                                                    <li>Pages:
-                                                        <a href="/spaceblog">
-                                                            <%= i %>
-                                                        </a>
-                                                    </li>
-                                                    <% } else { %>
-                                                        <li><a href="/spaceblog/page/<%= i %>"> - <%= i %></a></li>
+                            <!-- Pagination -->
+                            <div class="container text-center">
+                                <ul class="pagination">
+                                    <li>
+                                        <% for(var i = 0; i < pages; i++) { %>
+                                            <% if(i===0) { %>
+                                                <li>Pages:
+                                                    <a href="/spaceblog">
+                                                        <%= i %>
+                                                    </a>
+                                                </li>
+                                                <% } else { %>
+                                                    <li><a href="/spaceblog/page/<%= i %>"> - <%= i %></a></li>
+                                                    <% } %>
                                                         <% } %>
-                                                            <% } %>
-                                        </li>
-                                    </ul>
+                                    </li>
+                                </ul>
 
 
-                                </div>
+                            </div>
 
 
-            </div>
+        </div>
 
-            <!-- Sidebar Widgets Column -->
-            <div class="col-md-4">
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
 
-                <!-- Search Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Search</h5>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-btn">
+            <!-- Search Widget -->
+            <!-- <div class="card my-4">
+                <h5 class="card-header">Search</h5>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
                         <button class="btn btn-secondary" type="button">Go!</button>
                         </span>
-                        </div>
                     </div>
                 </div>
+            </div> -->
 
-                <!-- Categories Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Categories</h5>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">Web Design</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">HTML</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Freebies</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">JavaScript</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">CSS</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tutorials</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <!-- Categories Widget -->
 
-                <!-- Side Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Side Widget</h5>
-                    <div class="card-body">
-                        You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-                    </div>
+
+            <!-- Side Widget -->
+            <!-- <div class="card my-4">
+                <h5 class="card-header">Side Widget</h5>
+                <div class="card-body">
+                    You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
