--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,11 +1,84 @@
-.thumbnail img {
-    width: 100%;
-}
-
-.thumbnail {
-    padding: 0;
-}
-
-.thumbnail .caption-full {
-    padding: 9px;
-}
+    html {
+        position: relative;
+        min-height: 100%;
+    }
+    
+    body {
+        background: #2980B9;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, rgb(170, 220, 253));
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #FFFFFF, #6DD5FA, rgb(170, 220, 253));
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        margin: 0 0 100px;
+        /* bottom = footer height */
+        padding: 25px;
+        max-width: 100%;
+    }
+    
+    footer {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        /* height: 100px; */
+        overflow: hidden;
+    }
+    
+    .thumbnail .caption-full {
+        padding: 9px;
+    }
+    
+    #posts {
+        border-width: 15px;
+        border-color: rgb(213, 235, 250);
+    }
+    
+    .my-4 {
+        margin-bottom: 2.5rem!important;
+        margin-top: 2.5rem!important;
+        text-align: center;
+    }
+    
+    .imagePost {
+        padding-top: 15px;
+    }
+    
+    img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 1%;
+    }
+    
+    .item {
+        width: 40%;
+        min-height: 40%;
+        max-height: auto;
+        float: left;
+        margin: 3px;
+        padding-right: 30px;
+    }
+    
+    .titlePost {
+        font-family: 'Libre Baskerville', serif;
+        font-size: 80px;
+        padding-left: 25px;
+    }
+    
+    #titleSpace {
+        font-family: 'Tangerine', cursive;
+        font-size: 96px;
+        text-shadow: 4px 4px 4px #aaa;
+    }
+    
+    #submittedby {
+        text-align: right;
+    }
+    
+    .postText {
+        text-align: justify;
+    }
+    
+    #editor-container {
+        height: 130px;
+    }
