--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,4 +46,4 @@
                     </div>
                     <% } %>
     </div>
-    <div class="container">
+    <div class="content container">
