--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -1,33 +1,38 @@
 <% include ../partials/headerSpace %>
-    <div class="row">
 
-        <div class="col-md-12">
-            <div class="thumbnail">
-                <img class="img-responsive" src="<%= spacePost.image %>">
-                <div class="caption-full">
-                    <h4>
-                        <a>
-                            <%=spacePost.name%>
-                        </a>
-                    </h4>
-                    <p>
-                        <%= spacePost.description %>
-                    </p>
-                    <p>
-                        <em>Submitted By <%= spacePost.author.username %></em>
-                    </p>
-                    <% if(currentUser && (spacePost.author.id.equals(currentUser._id) || currentUser.username === "alex")) { %>
-                        <a class="btn btn-xs btn-warning" href="/spaceblog/<%= spacePost._id %>/edit">Edit</a>
-                        <form id="delete-form" action="/spaceblog/<%= spacePost._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-xs btn-danger">Delete</button>
-                        </form>
-                        <% }%>
-                </div>
+    <script>
+        tinymce.init({
+            selector: 'textarea'
+        });
+    </script>
+
+    <div class="row">
+        <div class="imagePost col-md-12 ">
+            <img class="item img-responsive" src="<%= spacePost.image %>">
+            <div class="caption-full">
+                <h4>
+                    <a class="titlePost">
+                        <%=spacePost.name%>
+                    </a>
+                </h4>
+                <p>
+                    <em class="float-right" id="submittedby">Submitted by <%= spacePost.author.username %> on <%= moment(spacePost.createdOn).format('dddd DD/MM/YYYY');  %></em>
+                </p>
+                <br><br>
+                <p class="postText">
+                    <%- spacePost.text %>
+                </p>
+                <% if(currentUser && (spacePost.author.id.equals(currentUser._id) || currentUser.username === "alex")) { %>
+                    <a class="btn btn-xs btn-warning" href="/spaceblog/<%= spacePost._id %>/edit">Edit</a>
+                    <form style="display: inline" id="delete-form" action="/spaceblog/<%= spacePost._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-xs btn-danger">Delete</button>
+                    </form>
+                    <% }%>
             </div>
-            <div class="well">
-                <div class="text-right">
-                    <a class="btn btn-success" href="/spaceblog/<%= spacePost._id %>/comments/new">Add New Comment</a>
-                </div>
+        </div>
+        <div class="row">
+            <div class="imagePost col-md-12 ">
+                <a class="btn btn-success" href="/spaceblog/<%= spacePost._id %>/comments/new">Add New Comment</a>
                 <hr>
                 <% spacePost.comments.forEach(function(comment){ %>
                     <div class="row">
@@ -39,7 +44,7 @@
                             </p>
                             <% if(currentUser && (comment.author.id.equals(currentUser._id) || currentUser.username === "alex")) { %>
                                 <a class="btn btn-xs btn-warning" href="/spaceblog/<%=spacePost._id %>/comments/<%=comment._id %>/edit">Edit</a>
-                                <form id="delete-form" action="/spaceblog/<%=spacePost._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                                <form style="display: inline" id="delete-form" action="/spaceblog/<%=spacePost._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
                                     <input type="submit" class="btn btn-xs btn-danger" value="Delete">
                                 </form>
                                 <% } %>
