--- a/views/space/edit.ejs
+++ b/views/space/edit.ejs
@@ -16,15 +16,12 @@
                     <div class="form-group">
                         <input class="form-control" type="text" name="spacePost[image]" value="<%= spacePost.image %>">
                     </div>
-                    <!-- <div class="form-group">
-                                        <input class="form-control" type="text" name="spacePost[description]" value="<%= spacePost.description %>">
-                                    </div> -->
                     <div class="form-group">
                         <textarea name="spacePost[text]" id="mytextarea"><%= spacePost.text %></textarea>
                     </div>
-                    <!-- <div class="form-group">
-                                        <input class="form-control" type="text" name="spacePost[text]" value="<%= spacePost.text %>">
-                                    </div> -->
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="spacePost[description]" value="<%= spacePost.description %>">
+                    </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                     </div>
