--- a/views/space/showSpacePost.ejs
+++ b/views/space/showSpacePost.ejs
@@ -7,26 +7,28 @@
     </script>
 
     <div class="row">
-        <div class="imagePost col-md-12 ">
-            <img class="item img-responsive" src="<%= spacePost.image %>">
-            <div class="caption-full">
-                <h4>
-                    <a class="titlePost">
-                        <%=spacePost.name%>
-                    </a>
-                </h4>
+        <div style="margin-top: 30px;" class="col-md-12 ">
+            <h4>
+                <a class="titlePost">
+                    <%=spacePost.name%>
+                </a>
+            </h4>
+            <p>
+                <em class="float-right" id="submittedby">Submitted by <%= spacePost.author.username %> on <%= moment(spacePost.createdOn).format('dddd DD/MM/YYYY');  %></em>
+            </p>
+            <img id="postImage" class="img-responsive float-left" src="<%= spacePost.image %>">
+            <div class="postText">
                 <p>
-                    <em class="float-right" id="submittedby">Submitted by <%= spacePost.author.username %> on <%= moment(spacePost.createdOn).format('dddd DD/MM/YYYY');  %></em>
-                </p>
-                <br><br>
-                <p class="postText">
                     <%- spacePost.text %>
                 </p>
                 <% if(currentUser && (spacePost.author.id.equals(currentUser._id) || currentUser.username === "alex")) { %>
-                    <a class="btn btn-xs btn-warning" href="/spaceblog/<%= spacePost._id %>/edit">Edit</a>
-                    <form style="display: inline" id="delete-form" action="/spaceblog/<%= spacePost._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-xs btn-danger">Delete</button>
-                    </form>
+                    <div style="margin: 1%;">
+                        <a class="btn btn-xs btn-warning" href="/spaceblog/<%= spacePost._id %>/edit">Edit</a>
+                        <form style="display: inline" id="delete-form" action="/spaceblog/<%= spacePost._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
+                    </div>
+
                     <% }%>
             </div>
         </div>
