--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 </div>
 <!-- /.container -->
+</main>
 <footer class="footer py-5 bg-dark">
     <div class="container">
         <p class="m-0 text-center text-white">Copyright Alex Buaiscia &copy; - 2018</p>
