--- a/views/partials/headerSpace.ejs
+++ b/views/partials/headerSpace.ejs
@@ -29,92 +29,94 @@
 </head>
 
 <body>
+    <header>
 
 
-    <div class="container-fluid">
+        <div id="navStyle" class="container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
 
 
-            <a style="padding-left: 10%" class="navbar-brand" href="#">Alex Buaiscia</a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a style="padding-left: 10%" class="navbar-brand" href="#">Alex Buaiscia</a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                               <span class="navbar-toggler-icon"></span>
                             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 
-                <ul class="navbar-nav navbar-left">
-                    <a class="nav-item nav-link active" href="/">Home</a>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <ul class="navbar-nav navbar-left">
+                        <a class="nav-item nav-link active" href="/">Home</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Scrittura
                                   </a>
-                        <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Pubblicazioni</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Blog di scrittura</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/spaceblog">Spaceblog</a>
-                    </li>
+                            <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Pubblicazioni</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Blog di scrittura</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/spaceblog">Spaceblog</a>
+                        </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Dev life
                                   </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Projects</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Skills</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Curriculum</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Projects</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Skills</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Curriculum</a>
+                            </div>
+                        </li>
+                    </ul>
+
+
+                </div>
+                <!-- <div id="signButtons" class="row"> -->
+
+                <div id="signButtons" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser){ %>
+                            <li><a class="btn btn-outline-info" href="/login">Login  &nbsp; </a></li>
+                            <div class="divider"></div>
+                            <li><a class="btn btn-outline-info" href="/register">Sign Up  &nbsp; </a></li>
+                            <% } else { %>
+                                <li style="padding-top: 7px;"><a href="#">Signed In as <%= currentUser.username %>  &nbsp; </a></li>
+                                <div class="divider"></div>
+                                <div class="divider"></div>
+                                <div class="divider"></div>
+                                <li><a class="btn btn-outline-info" href="/logout">Logout  &nbsp; </a></li>
+                                <% } %>
+                    </ul>
+                </div>
+
+                <!-- </div> -->
+
+
+
+            </nav>
+        </div>
+
+
+
+        <div class="container-fluid">
+
+            <% if(error && error.length > 0){ %>
+                <div class="alert alert-danger" role="alert">
+                    <%= error %>
+                </div>
+                <% } %>
+                    <% if(success && success.length > 0){ %>
+                        <div class="alert alert-success" role="alert">
+                            <%= success %>
                         </div>
-                    </li>
-                </ul>
-
-
-            </div>
-            <!-- <div id="signButtons" class="row"> -->
-
-            <div id="signButtons" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <% if(!currentUser){ %>
-                        <li><a class="btn btn-outline-info" href="/login">Login  &nbsp; </a></li>
-                        <div class="divider"></div>
-                        <li><a class="btn btn-outline-info" href="/register">Sign Up  &nbsp; </a></li>
-                        <% } else { %>
-                            <li style="padding-top: 7px;"><a href="#">Signed In as <%= currentUser.username %>  &nbsp; </a></li>
-                            <div class="divider"></div>
-                            <div class="divider"></div>
-                            <div class="divider"></div>
-                            <li><a class="btn btn-outline-info" href="/logout">Logout  &nbsp; </a></li>
-                            <% } %>
-                </ul>
-            </div>
-
-            <!-- </div> -->
-
-
-
-        </nav>
-    </div>
-
-
-
-    <div class="container-fluid">
-
-        <% if(error && error.length > 0){ %>
-            <div class="alert alert-danger" role="alert">
-                <%= error %>
-            </div>
-            <% } %>
-                <% if(success && success.length > 0){ %>
-                    <div class="alert alert-success" role="alert">
-                        <%= success %>
-                    </div>
-                    <% } %>
-    </div>
-
-    <div style="padding-left: 10%; padding-right:10%" class="container-fluid">
+                        <% } %>
+        </div>
+    </header>
+    <main>
+        <div style="padding-left: 10%; padding-right:10%" class="container-fluid">
