--- a/views/space/newPost.ejs
+++ b/views/space/newPost.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/headerSpace %>
+<% include ../partials/header %>
 
     <div class="row">
         <h1 style="text-align: center; padding: 20px;">Create a New Space Post</h1>
