--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/headerSpace %>
+<% include ../partials/header %>
 
     <div class="row">
         <h1 id="titleSpace" class="my-4">Space blog
