added fixed nav and indexed prio

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -121,4 +121,4 @@
         </div>
     </header>
     <main>
-        <div style="padding-left: 10%; padding-right:10%" class="container-fluid">
+        <div id="containerNav" class="container-fluid">
