--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,208 +1,223 @@
-    html {
-        position: relative;
-        min-height: 100%;
-    }
-    
-    body {
-        background: #ADA996;
-        /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
-        /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
-        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        margin: 0;
-        /* bottom = footer height */
-        padding: 0;
-        padding-bottom: 10%;
-        max-width: 100%;
-    }
-    
-    footer {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        /* height: 100px; */
-        overflow: hidden;
-    }
-    
-    #navStyle {
-        font-size: 1.2em;
-    }
-    
-    .navbar-nav li {
-        border-right: 1px solid rgba(0, 0, 0, 0.322);
-    }
-    
-    .navbar-nav li:last-child {
-        border: none;
-    }
-    
-    .navbar-right {
-        border: none;
-    }
-    
-    .divider {
-        width: 5px;
-        height: auto;
-        display: inline-block;
-    }
-    
-    .navbar-light {
-        font-family: 'Old Standard TT', serif;
-        font-size: 1.2em;
-        background: #ADA996;
-        /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
-        /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
-    }
-    
-    .container-fluid {
-        width: 100%;
-        padding: 0;
-    }
-    
-    .thumbnail .caption-full {
-        padding: 9px;
-    }
-    
-    #posts {
-        /* border-width: 5px;
+                   :root {
+                      /*  */
+                  }
+                  
+                  html {
+                      position: relative;
+                      min-height: 100%;
+                  }
+                  
+                  body {
+                      background: #ADA996;
+                      /* fallback for old browsers */
+                      background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+                      /* Chrome 10-25, Safari 5.1-6 */
+                      background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+                      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                      margin: 0;
+                      /* bottom = footer height */
+                      padding: 0;
+                      padding-bottom: 10%;
+                      max-width: 100%;
+                  }
+                  
+                  footer {
+                      position: absolute;
+                      left: 0;
+                      bottom: 0;
+                      width: 100%;
+                      /* height: 100px; */
+                      overflow: hidden;
+                  }
+                  
+                  #navStyle {
+                      font-size: 1.2em;
+                      position: fixed;
+                      overflow: hidden;
+                      top: 0;
+                      width: 100%;
+                      z-index: 2;
+                  }
+                  
+                  .navbar-nav li {
+                      border-right: 1px solid rgba(0, 0, 0, 0.322);
+                  }
+                  
+                  .navbar-nav li:last-child {
+                      border: none;
+                  }
+                  
+                  .navbar-right {
+                      border: none;
+                  }
+                  
+                  .divider {
+                      width: 5px;
+                      height: auto;
+                      display: inline-block;
+                  }
+                  
+                  .navbar-light {
+                      font-family: 'Old Standard TT', serif;
+                      font-size: 1.2em;
+                      background: #ADA996;
+                      /* fallback for old browsers */
+                      background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+                      /* Chrome 10-25, Safari 5.1-6 */
+                      background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+                  }
+                  
+                  .container-fluid {
+                      width: 100%;
+                      padding: 0;
+                  }
+                  
+                  #containerNav {
+                      margin-top: 20px;
+                      padding-left: 10%;
+                      padding-right: 10%;
+                  }
+                  
+                  .thumbnail .caption-full {
+                      padding: 9px;
+                  }
+                  
+                  #posts {
+                      /* border-width: 5px;
         border-color: rgba(11, 33, 226, 0.952); */
-        max-width: 650px;
-    }
-    
-    .my-4 {
-        margin-bottom: 2.5rem!important;
-        margin-top: 2.5rem!important;
-        text-align: center;
-    }
-    
-    img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 1%;
-    }
-    
-    .item {
-        /* width: 100%;
+                      max-width: 650px;
+                  }
+                  
+                  .my-4 {
+                      margin-bottom: 2.5rem!important;
+                      margin-top: 2.5rem!important;
+                      text-align: center;
+                  }
+                  
+                  img {
+                      max-width: 100%;
+                      height: auto;
+                      border-radius: 1%;
+                  }
+                  
+                  .item {
+                      /* width: 100%;
         min-height: 50%;
         max-height: 400px; */
-        /* float: left; */
-        /* margin: 3px;
+                      /* float: left; */
+                      /* margin: 3px;
         padding-right: 30px; */
-    }
-    
-    .titlePost {
-        /* font-family: 'Libre Baskerville', serif; */
-        font-family: 'Old Standard TT', serif;
-        font-size: 60px;
-        /* padding-left: 25px; */
-    }
-    
-    .postText {
-        margin-top: 4%;
-        text-align: justify;
-    }
-    
-    #postImage {
-        max-width: 900px;
-        border-right: 20px solid transparent;
-        border-top: 50px solid transparent;
-    }
-    
-    #titleSpace {
-        font-family: 'Monoton', cursive;
-        font-size: 96px;
-        text-shadow: 4px 4px 4px #aaa;
-    }
-    
-    #submittedby {
-        text-align: right;
-    }
-    
-    #editor-container {
-        height: 130px;
-    }
-    
-    #signButtons {
-        padding-left: 40%;
-    }
-    
-    .card-columns {
-        column-count: 2;
-    }
-    
-    .card-title {
-        margin: 25px 1%;
-        font-family: 'Old Standard TT', serif;
-        font-size: 26px;
-        font-weight: bold;
-    }
-    
-    .card-text {
-        margin: 5px 1%;
-        font-family: 'Old Standard TT', serif;
-        font-size: 18px;
-    }
-    
-    .card-img {
-        position: relative;
-        overflow: hidden;
-        border-radius: 2%;
-        z-index: 1;
-    }
-    
-    .card-img img {
-        width: 100%;
-        height: auto;
-        display: block;
-    }
-    
-    #readMore {
-        background-color: #1ABC9C;
-        color: #fff;
-        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-        padding: .84rem 2.14rem;
-        font-size: .81rem;
-        -webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-        -o-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
-        margin: 0;
-        border: 0;
-        -webkit-border-radius: .125rem;
-        border-radius: .125rem;
-        cursor: pointer;
-        text-transform: uppercase;
-        white-space: normal;
-        word-wrap: break-word;
-        color: #fff;
-    }
-    
-    #readMore:hover {
-        background: orange;
-    }
-    
-    .shadow {
-        box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-        /* transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1); */
-    }
-    
-    .shadow:hover {
-        -webkit-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
-        -moz-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
-        box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
-    }
-    /* Gradient transparent - color - transparent */
-    
-    hr {
-        margin: 20px 0 30px 20%;
-        width: 50%;
-        border: 0;
-        height: 1px;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    }
+                  }
+                  
+                  .titlePost {
+                      /* font-family: 'Libre Baskerville', serif; */
+                      font-family: 'Old Standard TT', serif;
+                      font-size: 60px;
+                      /* padding-left: 25px; */
+                  }
+                  
+                  .postText {
+                      margin-top: 4%;
+                      text-align: justify;
+                  }
+                  
+                  #postImage {
+                      max-width: 900px;
+                      border-right: 20px solid transparent;
+                      border-top: 50px solid transparent;
+                  }
+                  
+                  #titleSpace {
+                      font-family: 'Monoton', cursive;
+                      font-size: 96px;
+                      text-shadow: 4px 4px 4px #aaa;
+                  }
+                  
+                  #submittedby {
+                      text-align: right;
+                  }
+                  
+                  #editor-container {
+                      height: 130px;
+                  }
+                  
+                  #signButtons {
+                      padding-left: 40%;
+                  }
+                  
+                  .card-columns {
+                      column-count: 2;
+                  }
+                  
+                  .card-title {
+                      margin: 25px 1%;
+                      font-family: 'Old Standard TT', serif;
+                      font-size: 26px;
+                      font-weight: bold;
+                  }
+                  
+                  .card-text {
+                      margin: 5px 1%;
+                      font-family: 'Old Standard TT', serif;
+                      font-size: 18px;
+                  }
+                  
+                  .card-img {
+                      position: relative;
+                      overflow: hidden;
+                      border-radius: 2%;
+                      z-index: 1;
+                  }
+                  
+                  .card-img img {
+                      width: 100%;
+                      height: auto;
+                      display: block;
+                  }
+                  
+                  #readMore {
+                      background-color: #1ABC9C;
+                      color: #fff;
+                      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+                      padding: .84rem 2.14rem;
+                      font-size: .81rem;
+                      -webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+                      transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+                      -o-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+                      transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+                      transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+                      margin: 0;
+                      border: 0;
+                      -webkit-border-radius: .125rem;
+                      border-radius: .125rem;
+                      cursor: pointer;
+                      text-transform: uppercase;
+                      white-space: normal;
+                      word-wrap: break-word;
+                      color: #fff;
+                  }
+                  
+                  #readMore:hover {
+                      background: orange;
+                  }
+                  
+                  .shadow {
+                      box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+                      /* transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1); */
+                  }
+                  
+                  .shadow:hover {
+                      -webkit-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+                      -moz-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+                      box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+                  }
+                  /* Gradient transparent - color - transparent */
+                  
+                  hr {
+                      margin: 20px 0 30px 20%;
+                      width: 50%;
+                      border: 0;
+                      height: 1px;
+                      background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+                  }
